# headroom

./: README.md  pyproject.toml  setup_cython.py
benchmarks/: baseline_simhash.json  before_cutover_baseline.json  benchmark_compression_models.py  bottleneck_baseline.json  capture_baseline.py  capture_bottleneck_baseline.py  compare_compression.py  compare_rust_simhash.py  compare_servers.py  compare_simhash.py  compression_server.py  current_benchmark.json  headroom_optimization_benchmarks.py  stress_test_compression.py  test_pipeline.py  verify_simhash.py
crates/headroom-simhash/: Cargo.toml  pyproject.toml
crates/headroom-simhash/src/: lib.rs
crates/headroom-simhash/tests/: test_integration.py  test_parity.py
crates/headroom-workers/: Cargo.toml  pyproject.toml
crates/headroom-workers/src/: lib.rs
crates/headroom-workers/tests/: test_worker_pool.py
headroom/: config.py  utils.py
headroom/cache/: compression_cache.py  tokenizer_cache.py
headroom/compression/smart/: __init__.py  _json_cython.pyx  _simhash_cython.pyx  analyze.py  compress.py  gpu_pool.py  optimized_simhash.py  parse.py  pipeline.py  serialize.py  warmup.py
headroom/proxy/: server.py
headroom/resilience/: __init__.py
headroom/transforms/: adaptive_sizer.py  async_pipeline.py  content_router.py  kompress_compressor.py  pipeline.py  smart_crusher.py
headroom/utils/: json.py
headroom/workers/: __init__.py
openspec/changes/optimize-request-pipeline/: HANDOFF.md  design.md  proposal.md  tasks.md
tests/stress/: payload_generator.py  test_compression_stress.py
(+24 files in other folders)
